2010-10-28 Jerome Pasquier  <rainbru@free.fr>

	* src/common/globaluri.cpp (installConfigFile): Handle std::exception
	when copying files.

2010-10-28 Jerome Pasquier  <rainbru@free.fr>
	* acinclude.m4 (RB_HANDLE_CROSS_COMPIL): Added -mwindows to LDFLAGS.
	* src/client/main.cpp : Remove the Win32 console capability.

2010-10-25 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Makefile.am (dll): Changes needed with ext/ objects.
	* src/common/Makefile.am (dll): Changes needed with ext/ objects.
	
2010-10-25 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Drawable: Remove ambigous references to Rectangle for
	cross-compilation.
	
	* src/ogreGui/Container (compute): basic implementation.
	
	* src/client/gsmenubase.cpp: Removed some references to oldOgreGui.

2010-10-23 Jerome Pasquier  <rainbru@free.fr>

	* src/client/gsmenubase.cpp (gsMenuBase): Set its own TexturePtr to
	its Container member.

2010-10-17 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Brush.cpp (drawRectangle): draw again.

	* src/ogreGui/Brush.cpp (debug): uncommented.
	* src/ogreGui/Drawable.cpp (draw): call reset() to prevent overlays
	to be hidden.
	
	* src/ogreGui/Brush.cpp : Implemented the brush's blend modes.

2010-10-16 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/OgreGuiRenderQueueListener : Implemented.

	* src/ogreGui/Container.cpp (draw): draws all its childs.
	
	* src/ogreGui/Drawable.cpp (draw): basic implementation.
	
	* src/ogreGui/Window.cpp (Window): Constructor load skinnable texture.
	
2010-09-07 Jerome Pasquier  <rainbru@free.fr>

	* src/client/: Removed ambiguities for Window in some files.
	
	* src/client/gsmainmenu.cpp: Can now be built with new OgreGui.
	* src/client/gsserverlist.cpp: Can now be built with new OgreGui.
	* src/client/gscreateaccount.cpp: Can now be built with new OgreGui.


2010-09-04 Jerome Pasquier  <rainbru@free.fr>

	* src/client/gsconnection.cpp: Can now be built with new OgreGui but 
	need some ugly hack for BetaGUI::Button.