@@ -115,12 +115,15 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-207 (16 oct 2010 - ???) SLOC ??? UT ??? FT ??:??
-- (2) Handle std::exception when copying config files
+- (5) Started to rename bgui images to default skin
+- NumDebug windows drwn again
+- Menu's background shown again
+- Handle std::exception when copying config files
 - Fixed some documentation warnings
    OgreGuiRenderQueueListener, Brush, GameEngine
 
 * v0.0.5-206 (16 oct 2010 - 28 oct 2010) SLOC ??? UT 250 FT 64:13
-- (15) Cross-compil : exe is now a GUI application
+- Cross-compil : exe is now a GUI application
 - Trying new version of wine 1.1.42 Do not work
 - Tryibng to recreate DLLs
    Common, OgreGui, Core
